--- a/readme.text
+++ b/readme.text
@@ -20,4 +20,46 @@
 2.概率性打印错乱,连续打印多图，图片出现重叠
 5.电池图标闪烁，但打印状态里电池电量依然是0，设备信息里电量在20以上，21。
 打印过程中偶尔出现电量低的回调。导致图片打不完整（比如两张打一张出来）
+4寸0403
+1.自检页没反应,命令发送，收到了返回。但不打印
+2.打印图片貌似卡顿，打印多张图(page=1)排版不对，有问题
+3.固件更新，更新完，直接关机重启，没回应
+4.一张图，打印两张(page=2)，会出现卡死，不响应的状态。只出图一张。多张图多张未测
+5.4寸蓝牙绑定需要设置pin(需要改成不要设置)
+6.一张bitmap打印成功会回调多次code10 info0
+7.固件更新不能像图片一样去掉delay，还是需要一包delay 6ms ，4k的时候delay400ms
+8.按了打印自检页之后，所有的命令就发送完收不到，断了重连也一样，卡死，需要重启机器
+9.打印多张图片，会返回多个code10 info0的状态。无法判定打印成功还是失败。影响到多张图打印（126K左右发包耗时857ms）
 
+二寸0407
+1.固件号没有按照新的01.01.00 这种格式来,导致固件升级没有在APP里生效.
+2.只能打连续纸,标签纸没有检测到间隙,无法准确打印
+3.下发打印图片后, 然后快速开盖, 打印机会异常,随后任何指令都失效,只能重启
+4.只能打固定的48mm*48mm的尺寸, 48* 50 或者更大都无法打印, 高度被限定死了, 现在还是只能打印笔48*48小的图片
+5.最新固件 mac地址没有广播出来
+6.打印机静止的时候每隔五分钟就会触发过纸, 期间没有任何操作
+7.电池图标闪烁，但打印状态里电池电量依然是0，设备信息里电量在20以上，21。打印过程中偶尔出现电量低的回调。导致图片打不完整（比如两张打一张出来）
+8.压缩算法等新版本固件
+
+四寸0408
+1.固件更新，更新完，直接关机重启，没回应
+2.4寸蓝牙绑定需要设置pin(需要改成不要设置)
+3.初次配对，填完pin值连接上后会返回一个不能识别的数据
+ SyzClassicBluManager>> NOTIFY解析数据出错[-64, -128, 0, 0, 0, 0, 0, 0, 0, -128, 0, 0,
+  -64, 0, 0, 0, 0, 0, 0, -32, 0, -64, -128, 0, -16, -128, 0, 0, 0, 0, -32, 0, 0,
+   -128, 0, 0, -64, 0, 0, 0, -128, 0, 0, -128, 0, 0, 0, -128, 0, -64, 0, -128,
+    -128, -128, 0, 0, 0, 0, -128, 0, 0, -128, 0, -64, 0, 0, 0, -32, 0, -128,
+    -128, 0, -64, 0, 0, -16, -128, 0, -128, 0, 0, -128, 0, 0, -16, -128, 0,
+     -64, -128, 0, -64, -128, -32, -128, -16, -128, 0, -128, 0, 0, 0, -128, 0, 0,
+      -64, 0, 0, 0, 0, -128, 0, 0, -64, -128, 0, 0, -128, 0, 0, 0, -32,
+       -128, 0, -32, -64, -128, 0, 0, 0, 0, 0, 0, 0, -128, 0, 0, -64, 0, 0, 0, 0, 0, 0,
+        -32, 0, -64, -128, 0, -16, -128, 0, 0, 0, 0, -32, 0, 0, -128, 0, 0, -64, 0, 0, 0,
+        -128, 0, 0, -128, 0, 0, 0, -128, 0, -64, 0, -128, -128, -128, 0, 0, 0, 0, -128,
+         0, 0, -128, 0, -64, 0, 0, 0, -32, 0, -128, -128, 0, -64, 0, 0, -16, -128, 0, -128, 0, 0,
+          -128, 0, 0, -16, -128, 0, -64, -128, -32, -128, -32, -128, -16, -128, 0, -128, 0, 0, 0,
+          -128, 0, 0, -64, 0, 0, 0, 0,
+ -128, 0, 0, -64, -128, 0, 0, -128, 0, 0, 0, -32, -128, 0, -32]
+4.打印图片后，多打几次，就会出现卡死，发命令不回复，死机
+5.一张图，打印两张(page=2)，打印一次成功，打印多次会出现卡死，不响应的状态。
+8.按了打印自检页之后，打印图片就没有回复了
+9.打印多张图片(page=1)，虽然多张图片code10 info 0只返回一次，但第二张就卡死不回复了
