--- a/readme.text
+++ b/readme.text
@@ -59,9 +59,24 @@
         -32, 0, -64, -128, 0, -16, -128, 0, 0, 0, 0, -32, 0, 0, -128, 0, 0, -64, 0, 0, 0,
         -128, 0, 0, -128, 0, 0, 0, -128, 0, -64, 0, -128, -128, -128, 0, 0, 0, 0, -128,
          0, 0, -128, 0, -64, 0, 0, 0, -32, 0, -128, -128, 0, -64, 0, 0, -16, -128, 0, -128, 0, 0,
-          -128, 0, 0, -16, -128, 0, -64, -128, -32, -128, -32, -128, -16, -128, 0, -128, 0, 0, 0,
+          -128, 0, 0, -16, -128, 0, -64, -128, -32, -128, -32, -128, -16,    -128, 0, -128, 0, 0, 0,
           -128, 0, 0, -64, 0, 0, 0, 0,
  -128, 0, 0, -64, -128, 0, 0, -128, 0, 0, 0, -32, -128, 0, -32]
 四寸0409
 1.固件更新，更新完，有回复，可以重启，但有不相关的数据返回
+二寸0411
+1.抖动后的图片，概率性压缩变大。不清楚应该是加内存还是换压缩算法
+2.抖动的图片按不压缩的数据发，一个问题是比压缩的打印卡顿，还有一个问题是大概率不回复
+二寸0412
+1.抖动后的图片，概率性压缩变大。不清楚应该是加内存还是换压缩算法
+2.抖动的图片按不压缩的数据发，一个问题是比压缩的打印卡顿，还有一个问题是大概率不回复
+3.压缩的图片，概率性不回code11 info1,无法发下一张，概率还挺大的。
+delay时间延长，概率就越低。估计还是spp发数据过快,硬件接受数据错乱的问题。有没有生产者消费者模式？
+4.当设置速度或者浓度为1时，概率性第一张图片没任何回复，大概率第3张图片没有code11 info1回复（打印6张图，每张2份）
+5.新的打印逻辑(图片先按4*1024分段，再压缩，再按200分包的方式发)，没有固件配合测试
+二寸0413
+1.图片打印结束后，概率性不回code10 info0  只回code11 info2
+2.单张图片，打印第一次正确，第二次出现图片的错乱。无论抖动和不抖动，不回复code10 info0
+3.调低速度，会出现打印不回复，打印乱码，不知道是不是到时把速度一刀切
+4.打印单张图片，概率性卡死
 
